# Animals.py

./: main.py  pyproject.toml
animalpy/: .coverage  README.rst  coverage.xml
animalpy/animalpy/: __init__.py
animalpy/tests/: test_animals.py
animals/: pyproject.toml
animals/tests/: test_animals.py
