[tool.poetry]
name = "animals"
version = "0.1.5"
description = "Python wrapper using some-random-api.ml that can get animal images and facts with easy plug-and-play syntax!"
authors = ["ksIsCute & Cesiyi"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"